Minor tweak to fix platform spacing - Edited theme/epub/epub.css with Atlas code editor

--- a/theme/epub/epub.css
+++ b/theme/epub/epub.css
@@ -1,23 +1,21 @@
 @charset "UTF-8";
 
 /*Suppress b-heads in toc*/
-li[data-type="sect2"] {display: none !important;}
+li[data-type="sect2"] { display: none !important; }
 
 /* Links to examples (STYL-1433) */
 .coderef {
     height: 0;
     font-size: x-small;
     font-style: italic;
-    margin: 1em 0 2.25em 17pt ;
+    margin: 1em 0 2.25em 17pt !important;
     page-break-before: avoid; 
 }
 
 pre[data-type="programlisting"] {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 1em !important;
+    margin-bottom: 1em !important;
 }
 
 /* inline code */
-code {
-    font-size: 85%;
-}
+code { font-size: 85%; }
